# CERES

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TRACKER.md  proof.toml  repo-map.toml
.roles/: ROLE.md
agents/: README.md
catalog/: README.md  SCHEMA.md
docs/: METHODOLOGY.md  PIPELINE.md  STYLE-GUIDE.md  capability-expansion.md
plans/: 2026-04-18-plan-a-scaffolding.md  2026-04-19-plan-b-research-smithing.md  2026-04-19-plan-c-catalog-smithing.md  2026-04-19-plan-d-sim.md  2026-04-19-plan-e-playbook.md  2026-04-19-plan-f-research-baking.md  2026-04-19-plan-g-catalog-baking.md  2026-04-19-plan-h-research-weaving.md  2026-04-19-plan-i-catalog-weaving.md  2026-04-19-plan-j-research-artisan-square.md  README.md
playbook/: README.md
research/: README.md
reviews/: ALIGNMENT-framework.md  CATALOG-AUDIT-plan-c.md  CATALOG-AUDIT-plan-g.md  CATALOG-AUDIT-plan-i.md  CHAPTERS-REVIEW-plan-b.md  CHECK-ceres-design.md  CHECK-plan-a-scaffolding.md  CHECK-plan-b-citations.md  PLAN-E-REVIEW.md  R1-P1-market-economist-ceres-design.md  R1-P1-market-economist-pitch-v2.md  R1-P2-commons-theorist-pitch-v2.md  (+10 more)
simulations/tier-a-comparator/: README.md  pyproject.toml
simulations/tier-a-comparator/results/: CIVIC-LENS-DIAGNOSTIC.md  SUMMARY.md
simulations/tier-a-comparator/results/baking/: SUMMARY.md
simulations/tier-a-comparator/results/weaving/: SUMMARY.md
simulations/tier-a-comparator/src/tier_a/: cli.py  io_catalog.py  lenses.py  runner.py  scales.py
simulations/tier-a-comparator/tests/: conftest.py  test_io_catalog.py  test_lenses.py  test_runner.py  test_scales.py
(+146 files in other folders)
