[package]
name = "ceres"
version = "0.1.0"
edition = "2021"

[dependencies]
rally-core = { git = "https://github.com/giodl73-repo/RALLY.git", package = "rally-core", branch = "master" }
rfacility-core = { git = "https://github.com/giodl73-repo/RLINE.git", package = "rfacility-core", branch = "master" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[workspace]
